# snake-arena-masters

./: .dockerignore  .env  .env.example  AGENTS.md  CI_CD.md  README.md  RENDER_DEPLOY.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml  test-only.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.new  Makefile  README.md  docker-entrypoint.py  docker-entrypoint.sh  pyproject.toml  render-build.sh
backend/app/: config.py  main.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: auth.py  leaderboard.py  spectate.py
backend/app/services/: active_players.py  auth_service.py  database.py  db_session.py  leaderboard_service.py  user_service.py
backend/app/utils/: security.py
backend/migrations/: env.py
backend/migrations/versions/: dfdfe7865376_initial_migration.py
backend/scripts/: seed_db.py  seed_info.py  test_score_submission.py  verify_api.py
backend/tests/: conftest.py  test_auth.py  test_leaderboard.py  test_spectate.py
backend/tests_integration/: conftest.py  test_best_score_integration.py
docs/: ci-cd-setup.md  concurrent_execution.md  docker-deployment.md  render-deployment.md  render-troubleshooting.md  score_submission_debug.md  score_submission_improvements.md
frontend/: .dockerignore  .env.production  Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json  package.json  render-build.sh
frontend/src/: App.tsx
frontend/src/components/game/: GameControls.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/lib/: api.test.ts  api.ts  apiClient.ts  gameLogic.test.ts  tokenStorage.ts
frontend/src/pages/: Index.tsx  Leaderboard.tsx  Login.tsx
frontend/src/types/: game.ts
src/: index.css
src/components/game/: GameBoard.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useGameLoop.ts
src/lib/: api.test.ts  api.ts  gameLogic.ts
src/pages/: Signup.tsx  Spectate.tsx
