[project]
name = "snake-arena-backend"
version = "0.1.0"
description = "Backend API for Snake Arena Masters multiplayer game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "email-validator>=2.3.0",
    "argon2-cffi>=25.1.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.14.7",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
# Set line length to 100
line-length = 100

# Target Python 3.12
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "N815",  # mixedCase variable in class scope (required for API spec compatibility)
    "N803",  # argument name should be lowercase (required for API spec compatibility)
    "B008",  # do not perform function calls in argument defaults (FastAPI pattern)
    "B904",  # raise from within except (stylistic choice)
]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"
